# intramarket_diff

./: BINANCE_BTCUSD_1h.csv  BINANCE_ETHUSD, 60_9b297.csv  Intramarketdifferencing.ipynb  README.md  flake.nix  pyproject.toml
