[tool.poetry]
name = "order-books"
version = "0.1.0"
description = ""
authors = ["Charles Maloney <charles.c.maloney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
notebook = "^7.0.7"
matplotlib = "^3.8.2"
mplfinance = "^0.12.10b0"
pandas-ta = "^0.3.14b0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
